fix: Clova Studio TPM